[package]
name = "window"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
memmap2 = "0.9.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_with = {version = "3.4.0", default-features = false, features = ["macros"]}
toml = "0.8.8"

[dev-dependencies]
expect-test = "1.4.1"
